recursion.cons.length.Length.scala.error
Compilation error:
Length:2: error: Missing closing brace `}' assumed here
def length(l:List[Int]): Int = {
^Length:2: error: expected class or object definition
def length(l:List[Int]): Int = {
^