recursion.cons.length.Length.scala.code
def length(l:List[Int]): Int = {
  if(l==Nil)
  	return 0
  else{
    l.tail
  	return 1+ length(l)
}